--- a/sem1/mfds/index.html
+++ b/sem1/mfds/index.html
@@ -559,7 +559,15 @@
 
   <h1>Math Foundations for Data Science</h1>
 
-
+<p><a href="resources/">Math Resources</a></p>
+<p>Important Concepts learnt:</p>
+<p>eigenvalues and eigenvectors</p>
+<p>equation of the form 
+A.x = λx</p>
+<p>A is square matrix and λ is a number (scalar).  </p>
+<p>x = 0 is a solution for any value of λ - trivial solution </p>
+<p>For non-trivial solution i.e. x ≠ 0, the values of λ are called the eigenvalues, characterstic values or latent roots of the matrix A and the corresponding solutions of the given equations A.x = λx are called eigenvectors or characteristic vectors of A.</p>
+<p>Expressed as a set of separate equations, we have </p>
 
 
 
