--- a/sem1/mfds/resources/index.html
+++ b/sem1/mfds/resources/index.html
@@ -547,7 +547,11 @@
 
   <h1>Resources</h1>
 
-
+<p><a href="https://www.site.uottawa.ca/~lucia/courses/2101-12/a3-sol.pdf">Discrete Mathematics - Induction</a></p>
+<p><a href="https://textbooks.math.gatech.edu/ila/linear-independence.html">Linear Independence and other topics</a></p>
+<p><a href="https://sites.cs.ucsb.edu/~cappello/2/resources/Proof_Examples.pdf">Discreate Mathematics - Structural Induction</a></p>
+<p><a href="https://mathsolver.microsoft.com/">MathSolver</a></p>
+<p><a href="https://www.desmos.com/calculator">Graph Calculator</a></p>
 
 
 
