--- a/sem1/dsad/index.html
+++ b/sem1/dsad/index.html
@@ -559,7 +559,24 @@
 
   <h1>Data Structures and Algorithm Design</h1>
 
-
+<p>Dynamic Programming:</p>
+<ul>
+<li>Knapsack fraction</li>
+<li>Knapsack 01</li>
+<li>Matrix chain</li>
+</ul>
+<p>Non Deterministic Algorithm - O(1)</p>
+<p>Non Deterministic Polynomial (NP)</p>
+<p>In computer programming, a nondeterministic algorithm is an algorithm that, even for the same input, can exhibit different behaviors on different runs, as opposed to a deterministic algorithm.</p>
+<p>hypothetical situation</p>
+<p>results can be verified in polynomial time </p>
+<p>Sudoku - Verification, once it is solved</p>
+<p>NP - Complete</p>
+<p>NP - hard</p>
+<p>Halting Problem - Given an input will my program halt, what are those input - NP Hard problem </p>
+<p>Satisfiability </p>
+<p>Cook's theorem </p>
+<p>Conjunctive normal form - Satisfiability </p>
 
 
 
