--- a/sem1/mfds/resources/index.html
+++ b/sem1/mfds/resources/index.html
@@ -552,6 +552,10 @@
 <p><a href="https://sites.cs.ucsb.edu/~cappello/2/resources/Proof_Examples.pdf">Discreate Mathematics - Structural Induction</a></p>
 <p><a href="https://mathsolver.microsoft.com/">MathSolver</a></p>
 <p><a href="https://www.desmos.com/calculator">Graph Calculator</a></p>
+<p>When <span class="arithmatex">\(a \ne 0\)</span>, there are two solutions to <span class="arithmatex">\((ax^2 + bx + c = 0)\)</span> and they are </p>
+<div class="arithmatex">\[ 
+x = {-b \pm \sqrt{b^2-4ac} \over 2a} 
+\]</div>
 
 
 
